Sat Apr 14 10:51:39 2001  Carlos O'Ryan  <coryan@uci.edu>

        * ace/Log_Msg.h:
          Document the lock related functions in a separate Doxygen
          section.

Mon Apr 23 17:18:35 2001  Steve Huston  <shuston@riverace.com>

        * ace/ACE.cpp (ACE::handle_timed_complete): Set need_to_check for
          any non-success result, or on a system where you can't tell (AIX).
          Also, to check, use getsockopt to retrieve the status/error if
          SOL_SOCKET and SO_ERROR are defined; else use the old recv method.
          This gets you a real error code on a failed connect, if the platform
          supports it.

        * tests/SOCK_Connector_Test.cpp: For an expected success, allow test
          to pass if socket gets a reset but not if it says ENOTCONN. If there
          are platforms that can't do SOL_SOCKET/SO_ERROR (above) then this
          other code may need to be re-enabled.

Mon Apr 23 13:36:27 2001  Steve Huston  <shuston@riverace.com>

        * ace/ACE.cpp (ACE::handle_timed_complete): Winsock (ACE_WIN32) sets
          the exception bit (not the read bit) for a failed async connect.
          So on fail, don't bother to do the recv trick to see if the socket
          really did fail.

        * ace/Connector.cpp (ACE_Connector::handle_output):
        * ace/SOCK_Connector.cpp (complete): Apparantly, Win2000 has
          fixed the problem where a connection succeeds but can't be used
          for a time. So, the sleep workaround is restructured for ACE_WIN32
          to try the new socket first, and only do the sleep if it fails.
          Don't try to do this check (e.g. building on Win2000) at compile
          time, since we want to be able to build on NT and run on Win2000.

        * ace/README:
        * ace/config-win32-common.h: Removed the macro,
          ACE_HAS_BROKEN_NONBLOCKING_CONNECTS. It was only used in the two
          cases above, and is not needed any longer.
